# dr-data-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  roadmap.md  vision.md
examples/: example_Ingestion.py  example_cleaning.py  example_end_to_end.py  example_export.py  example_reporting.py  example_validation.py
notebooks/: demo_end_to_end.ipynb
src/dr_datakit/: __init__.py  cleaning.py  export.py  ingestion.py  reporting.py  validation.py
tests/: test_cleaning.py  test_export.py  test_import.py  test_ingestion.py  test_reporting.py  test_validation.py
