[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dr-data-toolkit"
version = "0.1.0"
description = "A lightweight toolkit for reusable data workflows and Excel reporting"
authors = [{ name = "David Rodriguez" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2,<3.0",
    "numpy>=2.2,<3.0",
    "openpyxl>=3.1,<4.0",
    "pyarrow>=20,<21",
    "Pillow>=10",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
    "ipykernel",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
